# cmake-namespace-libaries

./: .gitignore  CMakeLists.txt  Config.cmake.in  EchoConfig.cmake.in  README.md
src/base/: CMakeLists.txt  echo.cpp  echo.hpp
src/formal/: CMakeLists.txt  formal_echo.cpp  formal_echo.hpp
src/formal/include/echo/: formal_echo.hpp
test/: CMakeLists.txt  Dockerfile.buster  main.cpp
